<!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2015 Nikos Bousios
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <string name="app_name">SecHeaders</string>
    <string name="Activity_name">Security Headers</string>
    <string name="scan">Scan</string>
    <string name="stats">Stats</string>
    <string name="about">About</string>
    <string name="btn_scan">Start Scan</string>
    <string name="cbx_save">Save into database?</string>
    <string name="txt_headers">Access Control Allow Origin, Content Security Policy (CSP), Cross Domain Meta Policy, Server Information, UTF-8 Character Encoding, X-Frame-Options (XFO), X-Powered-By, X-XSS-Protection, X-Content-Type-Options, X-Download-Options, X-Permitted-Cross-Domain-Policies, HTTP Strict Transport Security (HSTS),Secure Cookies, X-Pingback</string>
    <string name="txt_about_title">Security Headers that scanned</string>
    <!--<string name="txt_websites">google.com</string>-->
    <string name="txt_websites">google.com,facebook.com,youtube.com,baidu.com,yahoo.com,amazon.com,wikipedia.org,twitter.com,taobao.com,qq.com</string>
    <string name="made_by">Made by Rambou (Bousios Nikolaos)</string>
</resources>
